preparation to get live last stock data

--- a/core/abnormal_volumes_ru_stocks.ipynb
+++ b/core/abnormal_volumes_ru_stocks.ipynb
@@ -16,25 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "58453\n",
-      "58453\n",
-      "58453\n",
-      "58453\n",
-      "58453\n",
-      "58453\n",
-      "58453\n",
-      "58453\n",
-      "58453\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tinkoff.invest import Client\n",
     "\n",
@@ -135,15 +119,15 @@
     "\n",
     "stock_info = {\"ticker\": tickers, \"names\": names, \"figi\": figi}\n",
     "\n",
-    "l1_volumes = []\n",
-    "l2_lots = []\n",
-    "l3_prices = []\n",
-    "l4_time = []\n",
-    "l5_close = []\n",
-    "l6_high = []\n",
-    "l7_low = []\n",
-    "l8_bvp = []\n",
-    "l9_svp = []\n",
+    "# threshold coefficient for detecting abnormal volumes and abnormal price changes\n",
+    "THRESHOLD = 5.0\n",
+    "\n",
+    "LENGTH_OF_GAZP_DF = 61721\n",
+    "LENGTH_OF_VTBR_DF = 58453\n",
+    "\n",
+    "gazp_volumes, gazp_lots, gazp_prices, gazp_time, gazp_close, gazp_high, gazp_low, gazp_bvp, gazp_svp = [], [], [], [], [], [], [], [], []\n",
+    "gazp_data = {\"Объем\": gazp_volumes, \"Лоты\": gazp_lots, \"Цена\": gazp_prices, \"Время\": gazp_time, \"Закрытие\": gazp_close, \"Хай\": gazp_high, \"Лоу\": gazp_low, \"Покупка\": gazp_bvp, \"Продажа\": gazp_svp}\n",
+    "\n",
     "\n",
     "def main():\n",
     "    # gazp BBG004730RP0\n",
@@ -190,12 +174,10 @@
     "    # UPRO BBG004S686W0\n",
     "    # belu BBG000TY1C41\n",
     "    with Client(TOKEN) as client:\n",
-    "        data = {\"Объем\": l1_volumes, \"Лоты\": l2_lots, \"Цена\": l3_prices, \"Время\": l4_time, \"Закрытие\": l5_close, \"Хай\": l6_high, \"Лоу\": l7_low, \"Покупка\": l8_bvp, \"Продажа\": l9_svp}\n",
-    "        THRESHOLD = 5.0\n",
-    "\n",
+    "        \n",
     "        # try to track abnormal volumes on Gazprom\n",
     "        for candle in client.get_all_candles(\n",
-    "            figi=f'{stock_info[\"figi\"][1]}',\n",
+    "            figi=f'{stock_info[\"figi\"][0]}',\n",
     "            from_=now() - timedelta(days=90),\n",
     "            interval=CandleInterval.CANDLE_INTERVAL_1_MIN,\n",
     "        ):\n",
@@ -212,15 +194,26 @@
     "                    SVP = round((SV / TP) * 100)\n",
     "\n",
     "                    final_stock_volume_rub = int(candle.volume * float(quotation_to_decimal(candle.close)))\n",
-    "                    l1_volumes.append(make_million_volumes_on_float_stock_prices(final_stock_volume_rub))\n",
-    "                    l2_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
-    "                    l3_prices.append(float(quotation_to_decimal(candle.close)))\n",
-    "                    l4_time.append(candle.time)\n",
-    "                    l5_close.append(float(quotation_to_decimal(candle.close)))\n",
-    "                    l6_high.append(float(quotation_to_decimal(candle.high)))\n",
-    "                    l7_low.append(float(quotation_to_decimal(candle.low)))\n",
-    "                    l8_bvp.append(BVP)\n",
-    "                    l9_svp.append(SVP)\n",
+    "                    gazp_volumes.append(make_million_volumes_on_float_stock_prices(final_stock_volume_rub))\n",
+    "                    gazp_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
+    "                    gazp_prices.append(float(quotation_to_decimal(candle.close)))\n",
+    "                    gazp_time.append(candle.time)\n",
+    "                    gazp_close.append(float(quotation_to_decimal(candle.close)))\n",
+    "                    gazp_high.append(float(quotation_to_decimal(candle.high)))\n",
+    "                    gazp_low.append(float(quotation_to_decimal(candle.low)))\n",
+    "                    gazp_bvp.append(BVP)\n",
+    "                    gazp_svp.append(SVP)\n",
+    "\n",
+    "                    if len(gazp_volumes) > LENGTH_OF_GAZP_DF and len(gazp_lots) > LENGTH_OF_GAZP_DF and len(gazp_prices) > LENGTH_OF_GAZP_DF and len(gazp_time) > LENGTH_OF_GAZP_DF and len(gazp_close) > LENGTH_OF_GAZP_DF and len(gazp_high) > LENGTH_OF_GAZP_DF and len(gazp_low) > LENGTH_OF_GAZP_DF and len(gazp_bvp) > LENGTH_OF_GAZP_DF and len(gazp_svp) > LENGTH_OF_GAZP_DF:\n",
+    "                        del gazp_volumes[0]\n",
+    "                        del gazp_lots[0]\n",
+    "                        del gazp_prices[0]\n",
+    "                        del gazp_time[0]\n",
+    "                        del gazp_close[0]\n",
+    "                        del gazp_high[0]\n",
+    "                        del gazp_low[0]\n",
+    "                        del gazp_bvp[0]\n",
+    "                        del gazp_svp[0]\n",
     "\n",
     "            else:\n",
     "                # BUYING VOLUME AND SELLING VOLUME\n",
@@ -235,67 +228,69 @@
     "                    SVP = round((SV / TP) * 100)\n",
     "                \n",
     "                    #final_stock_volume_rub = int(candle.volume * quotation_to_decimal(candle.close))\n",
-    "                    l1_volumes.append(int(candle.volume * quotation_to_decimal(candle.close)))\n",
-    "                    l2_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
-    "                    l3_prices.append(int(quotation_to_decimal(candle.close)))\n",
-    "                    l4_time.append(candle.time)\n",
-    "                    l5_close.append(float(quotation_to_decimal(candle.close)))\n",
-    "                    l6_high.append(float(quotation_to_decimal(candle.high)))\n",
-    "                    l7_low.append(float(quotation_to_decimal(candle.low)))\n",
-    "                    l8_bvp.append(BVP)\n",
-    "                    l9_svp.append(SVP)\n",
+    "                    gazp_volumes.append(int(candle.volume * quotation_to_decimal(candle.close)))\n",
+    "                    gazp_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
+    "                    gazp_prices.append(int(quotation_to_decimal(candle.close)))\n",
+    "                    gazp_time.append(candle.time)\n",
+    "                    gazp_close.append(float(quotation_to_decimal(candle.close)))\n",
+    "                    gazp_high.append(float(quotation_to_decimal(candle.high)))\n",
+    "                    gazp_low.append(float(quotation_to_decimal(candle.low)))\n",
+    "                    gazp_bvp.append(BVP)\n",
+    "                    gazp_svp.append(SVP)\n",
+    "\n",
+    "                    if len(gazp_volumes) > LENGTH_OF_GAZP_DF and len(gazp_lots) > LENGTH_OF_GAZP_DF and len(gazp_prices) > LENGTH_OF_GAZP_DF and len(gazp_time) > LENGTH_OF_GAZP_DF and len(gazp_close) > LENGTH_OF_GAZP_DF and len(gazp_high) > LENGTH_OF_GAZP_DF and len(gazp_low) > LENGTH_OF_GAZP_DF and len(gazp_bvp) > LENGTH_OF_GAZP_DF and len(gazp_svp) > LENGTH_OF_GAZP_DF:\n",
+    "                        del gazp_volumes[0]\n",
+    "                        del gazp_lots[0]\n",
+    "                        del gazp_prices[0]\n",
+    "                        del gazp_time[0]\n",
+    "                        del gazp_close[0]\n",
+    "                        del gazp_high[0]\n",
+    "                        del gazp_low[0]\n",
+    "                        del gazp_bvp[0]\n",
+    "                        del gazp_svp[0]\n",
     "        \n",
-    "        '''df = pd.DataFrame(data)\n",
+    "        df = pd.DataFrame(gazp_data)\n",
     "\n",
     "        # Calculate the rolling average and standard deviation of the trading volume\n",
-    "        def calculate_volume_mean():\n",
-    "            volume_mean = df['Объем'].mean()\n",
-    "            return volume_mean\n",
-    "        \n",
-    "        def calculate_volume_std():\n",
-    "            volume_std = df['Объем'].std()\n",
-    "            return volume_std\n",
+    "        volume_mean = df['Объем'].mean()\n",
+    "        volume_std = df['Объем'].std()\n",
     "        \n",
     "        # Calculate the rolling average and standard deviation of the trading prices\n",
-    "        def calculate_prices_mean():\n",
-    "            prcies_mean = df['Цена'].mean()\n",
-    "            return prcies_mean\n",
+    "        prcies_mean = df['Цена'].mean()\n",
+    "        prices_std = df['Цена'].std()\n",
     "\n",
-    "        def calculate_prices_std():\n",
-    "            prices_std = df['Цена'].std()\n",
-    "            return prices_std'''\n",
     "        \n",
     "\n",
-    "        print(len(l1_volumes))\n",
-    "        print(len(l2_lots))\n",
-    "        print(len(l3_prices))\n",
-    "        print(len(l4_time))\n",
-    "        print(len(l5_close))\n",
-    "        print(len(l6_high))\n",
-    "        print(len(l7_low))\n",
-    "        print(len(l8_bvp))\n",
-    "        print(len(l9_svp))\n",
+    "        '''print(len(gazp_volumes))\n",
+    "        print(len(gazp_lots))\n",
+    "        print(len(gazp_prices))\n",
+    "        print(len(gazp_time))\n",
+    "        print(len(gazp_close))\n",
+    "        print(len(gazp_high))\n",
+    "        print(len(gazp_low))\n",
+    "        print(len(gazp_bvp))\n",
+    "        print(len(gazp_svp))'''\n",
     "\n",
     "        # len of gazp df is 61721\n",
-    "        # len of vtbr df is\n",
+    "        # len of vtbr df is 58453\n",
     "        \n",
-    "        \n",
-    "        '''for i in range(len(df)):\n",
-    "            abnormal_volume = (df['Объем'].iloc[i] - calculate_volume_mean()) / calculate_volume_std()\n",
-    "            abnormal_price_changes = (df['Цена'].iloc[i] - calculate_prices_mean()) / calculate_prices_std()\n",
+    "         \n",
+    "        abnormal_volume = (df['Объем'].iloc[-1] - volume_mean) / volume_std\n",
+    "        abnormal_price_changes = (df['Цена'].iloc[-1] - prcies_mean) / prices_std\n",
     "            \n",
-    "            if abnormal_volume >= THRESHOLD or abnormal_price_changes > THRESHOLD:\n",
-    "                if df[\"Покупка\"].iloc[i] > df[\"Продажа\"].iloc[i]:\n",
-    "                    print(f'#{stock_info[\"ticker\"][0]} {stock_info[\"names\"][0]}\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
-    "                    print('=========================================')\n",
-    "                else:\n",
-    "                    print(f'#{stock_info[\"ticker\"][0]} {stock_info[\"names\"][0]}\\n🔻 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
-    "                    print('=========================================')'''\n",
+    "        if abnormal_volume >= THRESHOLD or abnormal_price_changes > THRESHOLD:\n",
+    "            if df[\"Покупка\"].iloc[-1] > df[\"Продажа\"].iloc[-1]:\n",
+    "                print(f'#{stock_info[\"ticker\"][0]} {stock_info[\"names\"][0]}\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[-1], df[\"Цена\"].iloc[-1 - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[-1]))} ({df[\"Лоты\"].iloc[-1]})\\nПокупка: {df[\"Покупка\"].iloc[-1]}% Продажа: {df[\"Продажа\"].iloc[-1]}%\\nВремя: {df[\"Время\"].iloc[-1]}\\nЦена: {df[\"Цена\"].iloc[-1]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[-1], df[\"Цена\"].iloc[-1 - 840])}\\nЗаметил Баффет на Уораннах.')\n",
+    "                print('=========================================')\n",
+    "            else:\n",
+    "                print(f'#{stock_info[\"ticker\"][0]} {stock_info[\"names\"][0]}\\n🔻 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[-1], df[\"Цена\"].iloc[-1 - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[-1]))} ({df[\"Лоты\"].iloc[-1]})\\nПокупка: {df[\"Покупка\"].iloc[-1]}% Продажа: {df[\"Продажа\"].iloc[-1]}%\\nВремя: {df[\"Время\"].iloc[-1]}\\nЦена: {df[\"Цена\"].iloc[-1]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[-1], df[\"Цена\"].iloc[-1 - 840])}\\nЗаметил Баффет на Уораннах.')\n",
+    "                print('=========================================')\n",
+    "                \n",
     "    return 0\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    #while True:\n",
-    "    main()\n"
+    "    while True:\n",
+    "        main()\n"
    ]
   },
   {
