Keep working on detecting max stock df length and integrating bot to Telegram

--- a/core/abnormal_volumes_ru_stocks.ipynb
+++ b/core/abnormal_volumes_ru_stocks.ipynb
@@ -805,25 +805,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tinkoff.invest import Client\n",
     "\n",
@@ -1010,10 +994,50 @@
     "\n",
     "LENGTH_OF_GAZP_DF: int = 61724\n",
     "LENGTH_OF_VTBR_DF: int = 58453\n",
-    "#LENGTH_OF_LKOH_DF = \n",
+    "LENGTH_OF_LKOH_DF = 55016\n",
+    "LENGTH_OF_YNDX_DF: int = 55652\n",
+    "LENGTH_OF_MGNT_DF: int = 45114\n",
+    "LENGTH_OF_POLY_DF: int = 56891\n",
+    "LENGTH_OF_SBERP_DF: int = 52102\n",
+    "#LENGTH_OF_CHMF_DF: int = \n",
     "LENGTH_OF_ALRS_DF: int = 39065\n",
+    "#LENGTH_OF_MMK_DF: int = \n",
+    "#LENGTH_OF_PHOR_DF: int = \n",
+    "#LENGTH_OF_SNGS_DF: int = \n",
+    "#LENGTH_OF_SNGSP_DF: int = \n",
+    "#LENGTH_OF_NLMK_DF: int = \n",
+    "#LENGTH_OF_TATN_DF: int = \n",
+    "#LENGTH_OF_MTLR_DF: int = \n",
+    "#LENGTH_OF_MTSS_DF: int = \n",
+    "#LENGTH_OF_MOEX_DF: int = \n",
+    "#LENGTH_OF_RUAL_DF: int = \n",
+    "#LENGTH_OF_AFLT_DF: int = \n",
+    "#LENGTH_OF_CBOM_DF: int = \n",
     "LENGTH_OF_OZON_DF: int = 42607\n",
+    "#LENGTH_OF_AFKS_DF: int = \n",
+    "#LENGTH_OF_SMLT_DF: int = \n",
+    "#LENGTH_OF_SPBE_DF: int = \n",
+    "#LENGTH_OF_PIKK_DF: int = \n",
+    "#LENGTH_OF_IRAO_DF: int = \n",
+    "#LENGTH_OF_SIBN_DF: int = \n",
+    "#LENGTH_OF_RASP_DF: int = \n",
+    "#LENGTH_OF_SGZH_DF: int = \n",
+    "#LENGTH_OF_DSKY_DF: int = \n",
+    "#LENGTH_OF_TRNFP_DF: int = \n",
+    "#LENGTH_OF_RNFT_DF: int = \n",
+    "#LENGTH_OF_FIVE_DF: int = \n",
+    "#LENGTH_OF_BSPB_DF: int = \n",
+    "#LENGTH_OF_FLOT_DF: int = \n",
+    "#LENGTH_OF_UWGN_DF: int = \n",
+    "#LENGTH_OF_MTLRP_DF: int = \n",
+    "#LENGTH_OF_ISKJ_DF: int = \n",
+    "#LENGTH_OF_POSI_DF: int = \n",
+    "#LENGTH_OF_UPRO_DF: int = \n",
+    "#LENGTH_OF_BELU_DF: int = \n",
     "\n",
+    "\n",
+    "s_volumes, s_lots, s_prices, s_time, s_close, s_high, s_low, s_bvp, s_svp = [], [], [], [], [], [], [], [], []\n",
+    "s_data = {\"Объем\": s_volumes, \"Лоты\": s_lots, \"Цена\": s_prices, \"Время\": s_time, \"Закрытие\": s_close, \"Хай\": s_high, \"Лоу\": s_low, \"Покупка\": s_bvp, \"Продажа\": s_svp}\n",
     "\n",
     "gazp_volumes, gazp_lots, gazp_prices, gazp_time, gazp_close, gazp_high, gazp_low, gazp_bvp, gazp_svp = [], [], [], [], [], [], [], [], []\n",
     "gazp_data = {\"Объем\": gazp_volumes, \"Лоты\": gazp_lots, \"Цена\": gazp_prices, \"Время\": gazp_time, \"Закрытие\": gazp_close, \"Хай\": gazp_high, \"Лоу\": gazp_low, \"Покупка\": gazp_bvp, \"Продажа\": gazp_svp}\n",
@@ -1141,11 +1165,10 @@
     "\n",
     "\n",
     "def main():\n",
-    "    with Client(TOKEN) as client:\n",
-    "        \n",
+    "    with Client(TOKEN) as client:        \n",
     "        # try to track abnormal volumes on Alrosa\n",
     "        for candle in client.get_all_candles(\n",
-    "            figi=TCSG.figi,\n",
+    "            figi=SBERP.figi,\n",
     "            from_=now() - timedelta(days=90),\n",
     "            interval=CandleInterval.CANDLE_INTERVAL_1_MIN,\n",
     "        ):\n",
@@ -1162,26 +1185,26 @@
     "                    SVP = round((SV / TP) * 100)\n",
     "\n",
     "                    final_stock_volume_rub = int(candle.volume * float(quotation_to_decimal(candle.close)))\n",
-    "                    tcsg_volumes.append(make_million_volumes_on_float_stock_prices(final_stock_volume_rub))\n",
-    "                    tcsg_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
-    "                    tcsg_prices.append(float(quotation_to_decimal(candle.close)))\n",
-    "                    tcsg_time.append(candle.time)\n",
-    "                    tcsg_close.append(float(quotation_to_decimal(candle.close)))\n",
-    "                    tcsg_high.append(float(quotation_to_decimal(candle.high)))\n",
-    "                    tcsg_low.append(float(quotation_to_decimal(candle.low)))\n",
-    "                    tcsg_bvp.append(BVP)\n",
-    "                    tcsg_svp.append(SVP)\n",
+    "                    s_volumes.append(make_million_volumes_on_float_stock_prices(final_stock_volume_rub))\n",
+    "                    s_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
+    "                    s_prices.append(float(quotation_to_decimal(candle.close)))\n",
+    "                    s_time.append(candle.time)\n",
+    "                    s_close.append(float(quotation_to_decimal(candle.close)))\n",
+    "                    s_high.append(float(quotation_to_decimal(candle.high)))\n",
+    "                    s_low.append(float(quotation_to_decimal(candle.low)))\n",
+    "                    s_bvp.append(BVP)\n",
+    "                    s_svp.append(SVP)\n",
     "\n",
-    "                    '''if len(ozon_volumes) > LENGTH_OF_OZON_DF and len(ozon_lots) > LENGTH_OF_OZON_DF and len(ozon_prices) > LENGTH_OF_OZON_DF and len(ozon_time) > LENGTH_OF_OZON_DF and len(ozon_close) > LENGTH_OF_OZON_DF and len(ozon_high) > LENGTH_OF_OZON_DF and len(ozon_low) > LENGTH_OF_OZON_DF and len(ozon_bvp) > LENGTH_OF_OZON_DF and len(ozon_svp) > LENGTH_OF_OZON_DF:\n",
-    "                        del ozon_volumes[0]\n",
-    "                        del ozon_lots[0]\n",
-    "                        del ozon_prices[0]\n",
-    "                        del ozon_time[0]\n",
-    "                        del ozon_close[0]\n",
-    "                        del ozon_high[0]\n",
-    "                        del ozon_low[0]\n",
-    "                        del ozon_bvp[0]\n",
-    "                        del ozon_svp[0]'''\n",
+    "                    if len(s_volumes) > LENGTH_OF_SBERP_DF and len(s_lots) > LENGTH_OF_SBERP_DF and len(s_prices) > LENGTH_OF_SBERP_DF and len(s_time) > LENGTH_OF_SBERP_DF and len(s_close) > LENGTH_OF_SBERP_DF and len(s_high) > LENGTH_OF_SBERP_DF and len(s_low) > LENGTH_OF_SBERP_DF and len(s_bvp) > LENGTH_OF_SBERP_DF and len(s_svp) > LENGTH_OF_SBERP_DF:\n",
+    "                        del s_volumes[0]\n",
+    "                        del s_lots[0]\n",
+    "                        del s_prices[0]\n",
+    "                        del s_time[0]\n",
+    "                        del s_close[0]\n",
+    "                        del s_high[0]\n",
+    "                        del s_low[0]\n",
+    "                        del s_bvp[0]\n",
+    "                        del s_svp[0]\n",
     "\n",
     "            else:\n",
     "                # BUYING VOLUME AND SELLING VOLUME\n",
@@ -1196,28 +1219,28 @@
     "                    SVP = round((SV / TP) * 100)\n",
     "                \n",
     "                    #final_stock_volume_rub = int(candle.volume * quotation_to_decimal(candle.close))\n",
-    "                    tcsg_volumes.append(int(candle.volume * quotation_to_decimal(candle.close)))\n",
-    "                    tcsg_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
-    "                    tcsg_prices.append(int(quotation_to_decimal(candle.close)))\n",
-    "                    tcsg_time.append(candle.time)\n",
-    "                    tcsg_close.append(float(quotation_to_decimal(candle.close)))\n",
-    "                    tcsg_high.append(float(quotation_to_decimal(candle.high)))\n",
-    "                    tcsg_low.append(float(quotation_to_decimal(candle.low)))\n",
-    "                    tcsg_bvp.append(BVP)\n",
-    "                    tcsg_svp.append(SVP)\n",
+    "                    s_volumes.append(int(candle.volume * quotation_to_decimal(candle.close)))\n",
+    "                    s_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
+    "                    s_prices.append(int(quotation_to_decimal(candle.close)))\n",
+    "                    s_time.append(candle.time)\n",
+    "                    s_close.append(float(quotation_to_decimal(candle.close)))\n",
+    "                    s_high.append(float(quotation_to_decimal(candle.high)))\n",
+    "                    s_low.append(float(quotation_to_decimal(candle.low)))\n",
+    "                    s_bvp.append(BVP)\n",
+    "                    s_svp.append(SVP)\n",
     "\n",
-    "                    '''if len(ozon_volumes) > LENGTH_OF_OZON_DF and len(ozon_lots) > LENGTH_OF_OZON_DF and len(ozon_prices) > LENGTH_OF_OZON_DF and len(ozon_time) > LENGTH_OF_OZON_DF and len(ozon_close) > LENGTH_OF_OZON_DF and len(ozon_high) > LENGTH_OF_OZON_DF and len(ozon_low) > LENGTH_OF_OZON_DF and len(ozon_bvp) > LENGTH_OF_OZON_DF and len(ozon_svp) > LENGTH_OF_OZON_DF:\n",
-    "                        del ozon_volumes[0]\n",
-    "                        del ozon_lots[0]\n",
-    "                        del ozon_prices[0]\n",
-    "                        del ozon_time[0]\n",
-    "                        del ozon_close[0]\n",
-    "                        del ozon_high[0]\n",
-    "                        del ozon_low[0]\n",
-    "                        del ozon_bvp[0]\n",
-    "                        del ozon_svp[0]'''\n",
+    "                    if len(s_volumes) > LENGTH_OF_SBERP_DF and len(s_lots) > LENGTH_OF_SBERP_DF and len(s_prices) > LENGTH_OF_SBERP_DF and len(s_time) > LENGTH_OF_SBERP_DF and len(s_close) > LENGTH_OF_SBERP_DF and len(s_high) > LENGTH_OF_SBERP_DF and len(s_low) > LENGTH_OF_SBERP_DF and len(s_bvp) > LENGTH_OF_SBERP_DF and len(s_svp) > LENGTH_OF_SBERP_DF:\n",
+    "                        del s_volumes[0]\n",
+    "                        del s_lots[0]\n",
+    "                        del s_prices[0]\n",
+    "                        del s_time[0]\n",
+    "                        del s_close[0]\n",
+    "                        del s_high[0]\n",
+    "                        del s_low[0]\n",
+    "                        del s_bvp[0]\n",
+    "                        del s_svp[0]\n",
     "        \n",
-    "        df = pd.DataFrame(tcsg_data)\n",
+    "        df = pd.DataFrame(s_data)\n",
     "\n",
     "        # Calculate the rolling average and standard deviation of the trading volume\n",
     "        volume_mean = df['Объем'].mean()\n",
@@ -1228,33 +1251,37 @@
     "        prices_std = df['Цена'].std()\n",
     "        \n",
     "\n",
-    "        print(len(tcsg_volumes))\n",
-    "        print(len(tcsg_lots))\n",
-    "        print(len(tcsg_prices))\n",
-    "        print(len(tcsg_time))\n",
-    "        print(len(tcsg_close))\n",
-    "        print(len(tcsg_high))\n",
-    "        print(len(tcsg_low))\n",
-    "        print(len(tcsg_bvp))\n",
-    "        print(len(tcsg_svp))\n",
+    "        '''print(f'len sberp_volumes {len(s_volumes)}')\n",
+    "        print(f'len sberp_lots {len(s_lots)}')\n",
+    "        print(f'len sberp_prices {len(s_prices)}')\n",
+    "        print(f'len sberp_time {len(s_time)}')\n",
+    "        print(f'len sberp_close {len(s_close)}')\n",
+    "        print(f'len sberp_high {len(s_high)}')\n",
+    "        print(f'len sberp_low {len(s_low)}')\n",
+    "        print(f'len sberp_bvp {len(s_bvp)}')\n",
+    "        print(f'len sberp_svp {len(s_svp)}')\n",
+    "        print(f'len df Объем {len(df[\"Объем\"])}')\n",
+    "        print(f'len df Лоты {len(df[\"Лоты\"])}')\n",
+    "        print(f'len df Цена {len(df[\"Цена\"])}')\n",
+    "        print(f'len df Время {len(df[\"Время\"])}')\n",
+    "        print(f'len df Закрытие {len(df[\"Закрытие\"])}')\n",
+    "        print(f'len df Хай {len(df[\"Хай\"])}')\n",
+    "        print(f'len df Лоу {len(df[\"Лоу\"])}')\n",
+    "        print(f'len df Покупка { len(df[\"Покупка\"])}')\n",
+    "        print(f'len df Продажа {len(df[\"Продажа\"])}')'''\n",
     "\n",
-    "        # len of gazp df is 61724\n",
-    "        # len of vtbr df is 58453\n",
-    "        # len of alrs df is 39065\n",
-    "        # len of ozon df is 42607'''\n",
     "\n",
-    "        \n",
-    "        '''for i in range(len(df)):\n",
+    "        for i in range(len(df)):\n",
     "            abnormal_volume = (df['Объем'].iloc[i] - volume_mean) / volume_std\n",
     "            abnormal_price_changes = (df['Цена'].iloc[i] - prcies_mean) / prices_std\n",
     "            \n",
-    "            if abnormal_volume >= THRESHOLD or abnormal_price_changes > THRESHOLD:\n",
+    "            if abnormal_volume > THRESHOLD or abnormal_price_changes > THRESHOLD:\n",
     "                if df[\"Покупка\"].iloc[i] > df[\"Продажа\"].iloc[i]:\n",
-    "                    print(f'#{OZON.ticker} {OZON.name}\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {convert_time_to_moscow(df[\"Время\"].iloc[i])}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Баффет на Уораннах.')\n",
+    "                    print(f'#{SBERP.ticker} {SBERP.name}\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {convert_time_to_moscow(df[\"Время\"].iloc[i])}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Баффет на Уораннах.')\n",
     "                    print('=========================================')\n",
     "                else:\n",
-    "                    print(f'#{OZON.ticker} {OZON.name}\\n🔻 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {convert_time_to_moscow(df[\"Время\"].iloc[i])}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Баффет на Уораннах.')\n",
-    "                    print('=========================================')'''\n",
+    "                    print(f'#{SBERP.ticker} {SBERP.name}\\n🔻 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {convert_time_to_moscow(df[\"Время\"].iloc[i])}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Баффет на Уораннах.')\n",
+    "                    print('=========================================')\n",
     "\n",
     "                \n",
     "    return 0\n",
